<resources>
    <string name="app_name">Recursion</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="question_label">Question</string>
    <string name="summary_label">Summary</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="choose_difficulties">Choose the difficulties of the questions you want to try.</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="rank1button">1</string>
    <string name="rank2button">2</string>
    <string name="rank3button">3</string>
    <string name="currentrank">Current Rank: </string>
    <string name="start">Start</string>
    <string name="assessment_label">Assessment</string>
</resources>
