<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">


    <fragment
        android:id="@+id/Assessment"
        android:name="edu.cuny.qcc.cs.mod.Assessment"
        android:label="@string/assessment_label"
        tools:layout="@layout/assessment">

        <action
            android:id="@+id/action_Assessment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_Assessment_to_Question"
            app:destination="@id/Question" />
    </fragment>
    <fragment
        android:id="@+id/FirstFragment"
        android:name="edu.cuny.qcc.cs.mod.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_Question"
            app:destination="@id/Question" />
        <action
            android:id="@+id/action_FirstFragment_to_Assessment"
            app:destination="@id/Assessment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="edu.cuny.qcc.cs.mod.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <argument
            android:name="userId"
            app:argType="string"
            android:defaultValue='"-1"' />
    </fragment>
    <fragment
        android:id="@+id/Question"
        android:name="edu.cuny.qcc.cs.mod.Question"
        android:label="@string/question_label"
        tools:layout="@layout/question">

        <action
            android:id="@+id/action_Question_to_Summary"
            app:destination="@id/Summary" />
        <argument
            android:name="getRank1"
            app:argType="integer"
            android:defaultValue="1" />
        <argument
            android:name="getRank2"
            app:argType="integer"
            android:defaultValue="1" />
        <argument
            android:name="getRank3"
            app:argType="integer"
            android:defaultValue="1" />
        <argument
            android:name="userId"
            app:argType="string"
            android:defaultValue='"-1"' />
    </fragment>
    <fragment
        android:id="@+id/Summary"
        android:name="edu.cuny.qcc.cs.mod.Summary"
        android:label="@string/question_label"
        tools:layout="@layout/question">

        <action
            android:id="@+id/action_Summary_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>
